Changed File Names, and content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title> This is My Life! </title>
 	</head>
 	<body>
+	<p> My name is what? My name is who? <br> My name is Scotttt </p>
 		<p> <b> A Dive Into Me </b> </p>
 			<h3> Music That Makes Me Dance </h3>
 			<p> Umphrey's McGee </p>
@@ -24,5 +25,6 @@
 		<p> <b> The Universe is Very Intriguing </b> </p>
 			<p> If I ever get the chance to go to space, I would jump on that in a heartbeat. </p>
 				<img src="https://pixabay.com/static/uploads/photo/2015/11/15/08/15/universe-1044107_960_720.jpg">
+		<p> <b> Future Bucketlist Destinations </b> </p>
 	</body>
 </html>
